// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`settings/_components/RelayServer/RelayServerTable Default smoke-test 1`] = `
<div class="rounded-lg border bg-card p-4 text-card-foreground shadow-sm">
  <div class="relative w-full overflow-auto">
    <table class="w-full caption-bottom text-sm">
      <thead class="[&amp;_tr]:border-b">
        <tr class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted">
          <th class="h-12 px-4 text-left align-middle font-medium text-muted-foreground [&amp;:has([role=checkbox])]:pr-0">
            リレーサーバーのinbox
          </th>
          <th class="h-12 px-4 text-left align-middle font-medium text-muted-foreground [&amp;:has([role=checkbox])]:pr-0">
            承認状態
          </th>
        </tr>
      </thead>
      <tbody class="[&amp;_tr:last-child]:border-0">
        <tr class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted">
          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">
            https://relay.example.com/inbox
          </td>
          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">
            承認済み
          </td>
          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">
            <button class="relative inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 hover:bg-secondary h-9 px-4 py-2 text-destructive">
              <span class>
                削除
              </span>
            </button>
          </td>
        </tr>
        <tr class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted">
          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">
            https://relay2.example.com/inbox
          </td>
          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">
            送信済み
          </td>
          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">
            <button class="relative inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 hover:bg-secondary h-9 px-4 py-2 text-destructive">
              <span class>
                削除
              </span>
            </button>
          </td>
        </tr>
        <tr class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted">
          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">
            https://relay3.example.com/inbox
          </td>
          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">
            失敗
          </td>
          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">
            <button class="relative inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 hover:bg-secondary h-9 px-4 py-2 text-destructive">
              <span class>
                削除
              </span>
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`settings/_components/RelayServer/RelayServerTable Empty smoke-test 1`] = `
<div class="rounded-lg border bg-card p-4 text-card-foreground shadow-sm">
  <div class="relative w-full overflow-auto">
    <table class="w-full caption-bottom text-sm">
      <caption class="py-4 text-sm text-muted-foreground">
        登録なし
      </caption>
      <thead class="[&amp;_tr]:border-b">
        <tr class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted">
          <th class="h-12 px-4 text-left align-middle font-medium text-muted-foreground [&amp;:has([role=checkbox])]:pr-0">
            リレーサーバーのinbox
          </th>
          <th class="h-12 px-4 text-left align-middle font-medium text-muted-foreground [&amp;:has([role=checkbox])]:pr-0">
            承認状態
          </th>
        </tr>
      </thead>
      <tbody class="[&amp;_tr:last-child]:border-0">
      </tbody>
    </table>
  </div>
</div>
`;
